welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:3: error: Missing closing brace `}' assumed here
		while (!estSurBiscuit) {
                ^SlugSnail:26: error: Missing closing brace `}' assumed here
			} else {
                        ^SlugSnail:26: error: ';' expected but 'else' found.
			} else {
                          ^SlugSnail:41: error: Missing closing brace `}' assumed here
}
^