welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
    def hunt(c:Color) {
		while (!estSurBiscuit) {
			if (isFacingTrail()) {
				avance()
				baisseBrosse()
				leveBrosse()
			} else {
				gauche()
				if (isFacingTrail()) {
					avance()
					baisseBrosse()
					leveBrosse()
				} else {
					droite()
					droite()
					if (isFacingTrail()) {
					avance()
					baisseBrosse()
					leveBrosse()
				}
				if (isFacingTrail2()) {
				avance()
				baisseBrosse()
				leveBrosse()
			} else {
				gauche()
				if (isFacingTrail2()) {
					avance()
					baisseBrosse()
					leveBrosse()
				} else {
					droite()
					droite()
					if (isFacingTrail2()) {
					avance()
					baisseBrosse()
					leveBrosse()
			}
    // Write your code here
}
prendBiscuit()
}
        // Write your code here
    }
   
def isFacingTrail():Boolean = {
	var rose:Boolean=false;
	if(!estFaceMur) {
		avance()
		if (getCouleurSol()==Color.PINK) {
			recule()
			rose=true;
		} else { 
			recule()
			rose=false;	
	}
	}
	return rose; 
    // Write your code here
}        
    // here comes your isFacingTrail method   
def isFacingTrail2():Boolean = {
	var orange:Boolean=false;
	if(!estFaceMur) {
		avance()
		if (getCouleurSol()==Color.ORANGE) {
			recule()
			orange=true;
		} else { 
			recule()
			orange=false;	
	}
	}
	return orange; 
    // Write your code here
}        
